fix & refactor toList => collectors.toList() , isEmptu => !isPresent